--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /public/hot
 /public/storage
 /public/uploads
+/public/pages
 /storage/*.key
 /vendor
 .env
@@ -14,3 +15,4 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+
